# shutdown-timer

./: com.streamer272.ShutdownTimer.json  meson.build
data/: com.streamer272.ShutdownTimer.appdata.xml.in  com.streamer272.ShutdownTimer.desktop.in  com.streamer272.ShutdownTimer.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  main.vala  meson.build  shutdown_timer.gresource.xml  window.vala
src/gtk/: window.ui
